# nats_queue

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/my_nats/: main.py
src/nats_queue/: main.py  nats_job.py  nats_limiter.py  nats_queue.py  nats_worker.py
src/test/: test_job.py  test_queue.py  test_rate_limit.py  test_workers.py
src/test/my_nats/: main.py
tests/: test_job.py  test_queue.py  test_rate_limit.py  test_workers.py
