[tool.poetry]
name = "my-nats"
version = "0.1.0"
description = ""
authors = ["Kristina Shishkina <k.shishkina@darwinsoft.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nats-py = "^2.9.0"
pytest-asyncio = "^0.24.0"
mock = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
